--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aula 1</title>
-</head>
+  <link rel "styleheet" href="css/index.css">
+<title>aula 1</title>
+<head>
+  <body>  
+<h1> Aula de Git</h1>
 <body>
-  <h1>Aula de Git</h1>  
-</body>
-</html>
